unpackaged/main/default/objects/d_wh__Sequence_Log__c/d_wh__Sequence_Log__c.object-meta.xml
<CustomObject>
    <label>Sequence Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sequence Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>