unpackaged/main/default/objects/d_wh__Sequence_Log__c/fields/d_wh__Main_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Main_Record_Id__c</fullName>
    <label>Main Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>