unpackaged/main/default/objects/d_wh__Sequence_Log__c/fields/d_wh__Summary__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Summary__c</fullName>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>