unpackaged/main/default/objects/d_wh__Sequence_Log__c/listViews/d_wh__All.listView-meta.xml
<ListView>
    <fullName>d_wh__All</fullName>
    <columns>NAME</columns>
    <columns>d_wh__Callout_Sequence__c</columns>
    <columns>d_wh__Main_Record_Id__c</columns>
    <columns>d_wh__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>